Footer Fix
Fixed footer overlapping on smaller screens. Also adjusted amount of yellow in certain h2

--- a/styles.css
+++ b/styles.css
@@ -233,7 +233,7 @@
 .main__content h2 {
     font-size: 4rem;
     background-color: #6f2da8;
-    background-image: linear-gradient(to top, #ff0844 0%, #effd5f 100%);
+    background-image: linear-gradient(to top, #ff0844 0%, #effd5f 65%);
     background-size: 100%;
     -webkit-background-clip: text;
     -moz-background-clip: text;
@@ -511,6 +511,7 @@
 /* FOOTER */
 .footer__container {
     background-color: #141414;
+    margin: 0 auto;
     padding: 5rem 0;
     display: flex;
     flex-direction: column;
@@ -608,6 +609,10 @@
 }
 
 @media screen and (max-width: 820px) {
+    .footer__container {
+        margin-top: 350px;
+    }
+
     .footer__links {
         padding-top: 2rem;
     }
@@ -702,7 +707,7 @@
     font-size: 3rem;
     text-align: center;
     background-color: #6f2da8;
-    background-image: linear-gradient(to top, #ff0844 0%, #effd5f 100%);
+    background-image: linear-gradient(to top, #ff0844 0%, #effd5f 65%);
     background-size: 100%;
     -webkit-background-clip: text;
     -moz-background-clip: text;
